k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-dashboard-lite
  namespace: k8s-dashboard
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-dashboard-lite
  template:
    metadata:
      labels:
        app: k8s-dashboard-lite
    spec:
      serviceAccountName: k8s-dashboard-sa
      containers:
      - name: k8s-dashboard-lite
        image: ghcr.io/ninoslavmedan/k8s-dashboard-lite:v5.0.0
        ports:
        - containerPort: 8080
