k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-dashboard-lite
spec:
  selector:
    app: k8s-dashboard-lite
  ports:
  - port: 8095
    targetPort: 8080
